cards: fix pills missing and card stats display on smaller screens

--- a/meinberlin/assets/scss/components_user_facing/_pill.scss
+++ b/meinberlin/assets/scss/components_user_facing/_pill.scss
@@ -3,6 +3,7 @@
     color: $white;
     font-weight: bold;
     font-size: $font-size-xs;
+    vertical-align: top;
 
     &--category {
         background-color: $purple;
